valid processing codes
